# smfInterpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: smf.h  smf_base.h  smf_callback.h  smf_conf.h  smf_debug.h  smf_header.h  smf_lib.h  smf_midiEvent.h  smf_trackHeader.h
sample/: sample.c  sample.h  sample_callback.c
src/: smf_debug.c  smf_dummyCallback.c  smf_header.c  smf_lib.c  smf_main.c  smf_midiEvent.c  smf_trackHeader.c
